--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
 "url": "http://192.168.1.85:8000/api/",
 "urlapp": "http://192.168.1.85:8000/",
-"urlsocket": "http://192.168.1.85:5000/""
+"urlsocket": "http://192.168.1.85:5000/"
 }
